[package]
name = "dns-sd"
build = "build.rs"
version = "0.1.1"
description = "Rust binding for dns-sd"
homepage = "https://github.com/plietar/rust-dns-sd"
repository = "https://github.com/plietar/rust-dns-sd"
authors = ["Paul Lietar <paul@lietar.net>"]
license = "MIT"

[build-dependencies]
pkg-config = "~0.3.6"

[dependencies]
libc = "0.2"
